--- a/Minha Versão.html
+++ b/Minha Versão.html
@@ -11,7 +11,7 @@
 </head>
 
 <body
-  style="border: 2px solid black; max-width: 600px; max-height: 100%; margin: 0; padding: 0; font-family: Arial, sans-serif; background-color: #FFFFFF; position: relative;">
+  style="max-width: 600px; max-height: 100%; margin: 0; padding: 0; font-family: Arial, sans-serif; background-color: #FFFFFF; position: relative;">
 
   <!-- Imagem de fundo rosa no topo -->
   <div
